--- a/index.html
+++ b/index.html
@@ -121,6 +121,74 @@ tr:nth-child(even){background-color: #f2f2f2}
     bottom: 10px;
 }
 
+/* The switch - the box around the slider */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider Button */
+.sliderB {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.sliderB:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .sliderB {
+  background-color: #2196F3;
+}
+
+input:focus + .sliderB {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .sliderB:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.sliderB.round {
+  border-radius: 34px;
+}
+
+.sliderB.round:before {
+  border-radius: 50%;
+}
+#table_GAS{
+    left : 2vw;
+    width: 90vw;
+    max-width: 800px;
+}
+
 
     </style>
 
@@ -186,8 +254,14 @@ tr:nth-child(even){background-color: #f2f2f2}
 <h1>Import T2 (kWh) :<span id=IT2>0</span></h1>
 
 <br>
+<!-- Rounded switch -->
+<span>Show GAS table</span><br>
+<label id="table_switch" class="switch">
+    <input id ="tableSwitch_GAS" type="checkbox" checked onclick="tableSwitch_GAS()">
+    <span class="sliderB round"></span>
+</label><br>
 
-<div style="overflow-x:auto;">
+<div id = "table_GAS" style="overflow-x:auto;">
 <table>
     <tbody id='TimeGasM3'>
 </tbody>
