--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ input:checked + .sliderB:before {
 <input id="Zoom" type="button" value = "Zoom"  onclick="toggleZoom()">
 
 <div class="slidecontainer">
-    <span>Timeposition</span><div id="rangeValue">10</div>
+    <span>Timeposition</span><div id="rangeValue_from">0</div>-<div id="rangeValue">10</div>
     <input type="range" min="1" max="100" value="100" step="0.001" class="slider" id="myRange">
     <span>Points</span><div id="pointsValue"></div>
     <input type="range" min="1" max="10" value="2" step="0.05" class="slider" id="myPoints">
