--- a/P1.html
+++ b/P1.html
@@ -761,7 +761,7 @@ if(min == max){
 }
 // Unit multiple of 1, 10, 2, 20, 5, 50, 100, 200, 500 etc
         un = (max - min) / 10;
-        un = un * 1.22; // give a little more space
+        // un = un * 0.99; // give a little more space
 
     // Units of 100,150, 200 and such
     if ( un >= 1000){
