--- a/P1.min.html
+++ b/P1.min.html
@@ -677,6 +677,7 @@ function drawLine(){
 
         MMU[1] = getMinMaxUn(datag);
         min = MMU[1][0];
+        MMU[1][0] = min = 0;
         max = MMU[1][1];
         un  = MMU[1][2];  // 1/10 of the axis
   
